--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "Cordell Bonnieux",
   "license": "ISC",
   "devDependencies": {
+    "css-loader": "^5.0.1",
+    "style-loader": "^2.0.0",
     "webpack": "^5.4.0",
     "webpack-cli": "^4.1.0"
   }
